Splash screen added

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,9 @@ dmypy.json
 *.rpyb
 cache/
 /limb_inc/log.txt
+/limb_inc/errors.txt
+/limb_inc-*-dists
+/limb_inc/game/saves
+/limb_inc/game/saves/*.json
+/limb_inc/game/saves/*.save
+/limb_inc/game/saves/persistent
