Tablet applications added: call and email

--- a/.gitignore
+++ b/.gitignore
@@ -132,6 +132,7 @@ cache/
 limb_inc/log.txt
 limb_inc/errors.txt
 limb_inc-*-dists
+limbus_inc-*-dists
 limb_inc/game/saves
 limb_inc/game/saves/*.save
 limb_inc/game/saves/navigation.json
